<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Instructions.</string>
    <string name="some_instructions_here">some instructions here.</string>
    <string name="view_shoes_list">View Shoes List</string>
    <string name="cancel">Cancel</string>
    <string name="add">add</string>
    <string name="new_shoe">New Shoe:</string>
    <string name="name">name</string>
    <string name="company">company</string>
    <string name="size">size</string>
    <string name="description">description</string>
    <string name="username">username:</string>
    <string name="password">password:</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="welcome_to_shoe_store">Welcome to Shoe Store</string>
    <string name="continue_to_read_the_instructions">continue to read the instructions</string>
    <string name="view_instructions">View Instructions</string>
    <string name="enter_shoe_name">enter shoe name</string>
    <string name="enter_shoe_company">enter shoe company</string>
    <string name="enter_shoe_description">enter shoe description</string>
    <string name="enter_shoe_size">enter shoe size</string>
</resources>
