<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.InstructionsFragment">

    <!-- this layout is simple, ok to use LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="25sp"
            android:text="@string/instructions" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="50sp"
            android:text="@string/some_instructions_here" />

        <Button
            android:id="@+id/view_shoes_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/view_shoes_list" />
    </LinearLayout>
</layout>